bk_ida/gccida/c2/nonoverlapping_memrefs_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2413:4: error: expected ';' after expression
rtx v42; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2413:5: error: use of undeclared identifier 'v42'
rtx v42; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2417:4: error: expected ';' after expression
rtx v46; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2417:5: error: use of undeclared identifier 'v46'
rtx v46; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2418:4: error: expected ';' after expression
rtx v47; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2418:5: error: use of undeclared identifier 'v47'
rtx v47; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2421:4: error: expected ';' after expression
rtx v50; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2421:5: error: use of undeclared identifier 'v50'
rtx v50; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2433:4: error: expected ';' after expression
rtx v62; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2433:5: error: use of undeclared identifier 'v62'
rtx v62; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2435:4: error: expected ';' after expression
rtx v64; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2435:5: error: use of undeclared identifier 'v64'
rtx v64; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2439:4: error: expected ';' after expression
rtx v68; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2439:5: error: use of undeclared identifier 'v68'
rtx v68; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2442:4: error: expected ';' after expression
rtx v71; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2442:5: error: use of undeclared identifier 'v71'
rtx v71; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2451:4: error: expected ';' after expression
rtx v80; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2451:5: error: use of undeclared identifier 'v80'
rtx v80; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/alias.c:2452:4: error: expected ';' after expression
rtx v81; // r12 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nonoverlapping_memrefs_p/src/obj/alias.o] Error 1
